--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       }
     </script>
   </head>
-  <body>
+  <body class="bg-zinc-100 dark:bg-zinc-800 transition-colors">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
